--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "daisyui": "^4.12.14",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
+  },
+  "scripts": {
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
+    "build": "npm run build:css"
   }
 }
