--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "tailwindcss": "^3.4.15"
   },
   "scripts": {
-    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify",
-    "build": "npm run build:css"
+    "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify"
   }
 }
