--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/src/index.html" }
-  ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "src/output.css",
+      "use": "@vercel/static"
+    }
+  ],
+  "rewrites": [{ "source": "/", "destination": "/src/index.html" }]
 }
