--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "scripts": {
     "build:css": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.9"
   }
 }
