commit-6: add-assets-to-vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/src/index.html" },
-    { "source": "/output.css", "destination": "/src/output.css" }
+    { "source": "/output.css", "destination": "/src/output.css" },
+    { "source": "/mark.svg", "destination": "/src/assets/mark.svg" }
   ]
 }
